--- a/home_service_spring_boot/homeservices/src/main/resources/application.properties
+++ b/home_service_spring_boot/homeservices/src/main/resources/application.properties
@@ -13,3 +13,13 @@ spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.Ph
 
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
+
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=masimasi128@gmail.com
+spring.mail.password=123456789Masi_
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+masimasi128@gmail.com=123456789masi_
