--- a/home_service_spring_boot/homeservices/src/main/resources/application.properties
+++ b/home_service_spring_boot/homeservices/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8090
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/home_service_boot
+spring.datasource.url=jdbc:mysql://localhost:3306/home_service_boot?useUnicode=yes&characterEncoding=UTF-8
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
