--- a/home_service_spring_boot/homeservices/src/main/resources/application.properties
+++ b/home_service_spring_boot/homeservices/src/main/resources/application.properties
@@ -17,9 +17,8 @@ spring.mvc.view.suffix=.jsp
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=masimasi128@gmail.com
-spring.mail.password=123456789Masi_
+spring.mail.username=yourEmail@gmail.com
+spring.mail.password=yourpassword
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
-masimasi128@gmail.com=123456789masi_
